<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    tools:context="demo.javahelps.com.depofcse.ImportantLInk">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv1"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textSize="30sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forcoding"
            android:textColor="@color/white"
            android:textAlignment="center"

            />
        <TextView

            android:id="@+id/tv2"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textSize="30sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forcoding1"
            android:textColor="@color/white"
            android:textAlignment="center"


            />

        <TextView

        android:id="@+id/tv3"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:textSize="30sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Forlearning"
        android:textColor="@color/white"
        android:textAlignment="center"


        />
        <TextView

            android:id="@+id/tv4"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textSize="30sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forlearning1"
            android:textColor="@color/white"
            android:textAlignment="center"


            />


        <TextView

            android:id="@+id/tv5"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textSize="30sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SomeBanglaSite"
            android:textColor="@color/white"
            android:textAlignment="center"


            />

        <TextView

            android:id="@+id/tv6"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textSize="30sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SomeBanglaSite1"
            android:textColor="@color/white"
            android:textAlignment="center"


            />



        <TextView

            android:id="@+id/tv7"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textSize="30sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/VideoTutorial"
            android:textColor="@color/white"
            android:textAlignment="center"


            />

        <TextView

            android:id="@+id/tv8"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textSize="30sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/VideoTutorial1"
            android:textColor="@color/white"
            android:textAlignment="center"


            />










    </LinearLayout>

</ScrollView>
